2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix MinGW portability...
	* network.h: EVEN on MinGW, socklen_t must be signed, so typedef it as
	an int.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	More fixes for MinGW portability.
	* network.h: Include stdint.h before using uint32_t.
	* windows.hh: Add a comment.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix portability issue on MinGW.
	* network.h: socklen_t and in_addr_t need to be typedef'ed even under
	MinGW.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix Windows portability.
	* network.h: socklen_t must really be int, not uint32_t or something
	similar.  Type correctness does not really matter on Windows.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Define POSIX types only when compiling with Visual C++.
	* network.h,
	* windows.hh: Here. Because MinGW has these types but hasn't got
	Visual's UINT*/INT*.

2007-03-30  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Improve portability on Windows.
	* network.h (socklen_t): typedef as UINT32 instead of int.
	(in_addr_t): New (32-bit unsigned integer).
	* windows.hh (uint8_t, int8_t, uint16_t, int16_t, uint32_t, int32_t,
	uint64_t, int64_t): Add typedefs for these POSIX types.

2007-03-23  Akim Demaille  <demaille@gostai.com>

	* libport/compiler.hh: Include iostream when needed.

2007-03-08  Akim Demaille  <akim.demaille@free.fr>

	* libport.mk: Fix EXTRA_DIST assignment..

2007-03-08  Akim Demaille  <demaille@gostai.com>

	I don't understand how it managed to remain unnoticed.
	* libport.mk (EXTRA_DIST): Ship libport_sources.

2007-03-04  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Cleanup the NOMINMAX issue.
	* ChangeLog: Cleanup a ChangeLog entry.
	* windows.hh: Define NOMINMAX to 1 (which is what MinGW does) and
	don't undefine it (that would be lying).

2007-03-02  Matthieu Nottale  <nottale@gostai.com>

	Revert commit 628
	* singleton-ptr.hh: Restore STATIC_INSTANCE which is used to define